# UFF-EDA-Trabalho-Computacional

./: CMakeLists.txt  Campeas.txt  EstandartesOuro.txt  README.md
libs/: BPlusStorage.c  BPlusStorage.h  BPlusTree2M.c  BPlusTree2M.h  HashMap2M.c  HashMap2M.h  HashMapM2.c  HashMapM2.h  HashUtils.c  LinkedList.c  LinkedList.h
src/: Console.c  Console.h  Main.c  Mutation.c  Mutation.h  Questionary.c  Questionary.h
src/models/: ChampionshipInfo.c  ChampionshipInfo.h  IndividualInfo.c  IndividualInfo.h  SchoolInfo.c  SchoolInfo.h  YearInfo.c  YearInfo.h
src/parsers/: Indexer.c  Indexer.h  Parser.c  Parser.h
